Bug 302040 - combobox: css->native border switch not working
Summary: combobox: css->native border switch not working
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml forms (other bugs)
Version First Reported In: 4.8.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-17 07:54 UTC by Andrea Iacovitti
Modified: 2012-06-17 08:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase (615 bytes, text/html)
2012-06-17 07:54 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2012-06-17 07:54:01 UTC
Created attachment 71881 [details]
testcase

combobox: css->native border switch not working
See the attached testcase.
Comment 1 Andrea Iacovitti 2012-06-17 08:00:35 UTC
Git commit e67682b44f30ee6d5a785dde34eb0dc16fb2c02e by Andrea Iacovitti.
Committed on 17/06/2012 at 09:58.
Pushed by aiacovitti into branch 'KDE/4.8'.

Combobox: fix css->native border restoring.

M  +2    -2    khtml/rendering/render_form.cpp

http://commits.kde.org/kdelibs/e67682b44f30ee6d5a785dde34eb0dc16fb2c02e