Combobox: fix css->native border restoring.

BUG: 302040